[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
name = "destination-insights-hub-put-time-series"
description = "Destination implementation for insights-hub-put-time-series."
authors = [ "Airbyte <contact@airbyte.io>",]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/destinations/insights-hub-put-time-series"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
packages = [ { include = "destination_insights_hub_put_time_series" }, {include = "main.py" } ]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
airbyte-cdk = "^2.0"

[tool.poetry.scripts]
destination-insights-hub-put-time-series = "destination_insights_hub_put_time_series.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "*"
pytest-mock = "*"
pytest = "*"

