[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
name = "source-insights-hub-get-time-series"
description = "Source implementation for insights-hub-get-time-series."
authors = [ "Airbyte <contact@airbyte.io>",]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/sources/insights-hub-get-time-series"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
packages = [ { include = "source_insights_hub_get_time_series" }, {include = "main.py" } ]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
airbyte-cdk = "^2.0"
mimesis = "==6.1.1"

[tool.poetry.scripts]
source-insights-hub-get-time-series = "source_insights_hub_get_time_series.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "*"
pytest-mock = "*"
pytest = "*"

